refactor: share utils between popup and content; drop ronin handling; remove unused code\n\n- Introduce utils.js with address + OSINT helpers\n- Use utils in content script and popup\n- Remove duplicate helpers and unused functions\n- Update manifest and popup to load utils.js\n- Simplify normalize() to 0x only

--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,7 @@
         "*://polygonscan.com/*", "*://*.polygonscan.com/*",
         "*://basescan.org/*", "*://*.basescan.org/*"
       ],
-      "js": ["content.js"],
+      "js": ["utils.js", "content.js"],
       "run_at": "document_idle"
     }
   ]
